--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
   "devDependencies": {
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
+    "jest": "^24.8.0",
     "react-test-renderer": "^16.8.6"
+  },
+  "resolutions": {
+    "react-scripts/jest": "^24.7.1"
   }
 }
